--- a/app/src/main/res/layout/manual.xml
+++ b/app/src/main/res/layout/manual.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/textView7"
+            android:id="@+id/winNum1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -18,7 +18,7 @@
             android:textAlignment="center" />
 
         <EditText
-            android:id="@+id/textView8"
+            android:id="@+id/winNum2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -26,7 +26,7 @@
             android:textAlignment="center" />
 
         <EditText
-            android:id="@+id/textView9"
+            android:id="@+id/winNum3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -34,7 +34,7 @@
             android:textAlignment="center" />
 
         <EditText
-            android:id="@+id/textView10"
+            android:id="@+id/winNum4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -42,7 +42,7 @@
             android:textAlignment="center" />
 
         <EditText
-            android:id="@+id/textView11"
+            android:id="@+id/winNum5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -50,7 +50,7 @@
             android:textAlignment="center" />
 
         <EditText
-            android:id="@+id/textView12"
+            android:id="@+id/winNum6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -64,11 +64,12 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/saveBtn"
+            android:id="@+id/winNumBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button"
-            android:textAlignment="center" />
+            android:hint="입력"
+            android:textAlignment="center"
+            android:textColorHint="#FFC107" />
     </LinearLayout>
 
     <LinearLayout
@@ -94,7 +95,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView26"
+                    android:id="@+id/win1"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -107,7 +108,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView28"
+                    android:id="@+id/win2"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -120,7 +121,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView30"
+                    android:id="@+id/win3"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -138,7 +139,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView38"
+                    android:id="@+id/win4"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -151,7 +152,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView40"
+                    android:id="@+id/win5"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -164,7 +165,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView42"
+                    android:id="@+id/win6"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -182,7 +183,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView44"
+                    android:id="@+id/win7"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -195,7 +196,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView46"
+                    android:id="@+id/win8"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -208,7 +209,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView48"
+                    android:id="@+id/win9"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -226,7 +227,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView50"
+                    android:id="@+id/win10"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -239,7 +240,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView52"
+                    android:id="@+id/win11"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -252,7 +253,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView54"
+                    android:id="@+id/win12"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -270,7 +271,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView86"
+                    android:id="@+id/win13"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -283,7 +284,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView88"
+                    android:id="@+id/win14"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -296,7 +297,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView90"
+                    android:id="@+id/win15"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -314,7 +315,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView20"
+                    android:id="@+id/win16"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -327,7 +328,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView22"
+                    android:id="@+id/win17"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -340,7 +341,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView24"
+                    android:id="@+id/win18"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -358,7 +359,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView32"
+                    android:id="@+id/win19"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -371,7 +372,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView34"
+                    android:id="@+id/win20"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -384,7 +385,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView36"
+                    android:id="@+id/win21"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -402,7 +403,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView56"
+                    android:id="@+id/win22"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -415,7 +416,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView58"
+                    android:id="@+id/win23"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -428,7 +429,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView60"
+                    android:id="@+id/win24"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -446,7 +447,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView68"
+                    android:id="@+id/win25"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -459,7 +460,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView70"
+                    android:id="@+id/win26"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -472,7 +473,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView72"
+                    android:id="@+id/win27"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -490,7 +491,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView92"
+                    android:id="@+id/win28"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -503,7 +504,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView94"
+                    android:id="@+id/win29"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -516,7 +517,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView96"
+                    android:id="@+id/win30"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -534,7 +535,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView14"
+                    android:id="@+id/win31"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -547,7 +548,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView16"
+                    android:id="@+id/win32"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -560,7 +561,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView18"
+                    android:id="@+id/win33"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -578,7 +579,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView62"
+                    android:id="@+id/win34"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -591,7 +592,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView64"
+                    android:id="@+id/win35"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -604,7 +605,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView66"
+                    android:id="@+id/win36"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -622,7 +623,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView80"
+                    android:id="@+id/win37"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -635,7 +636,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView82"
+                    android:id="@+id/win38"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -648,7 +649,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView84"
+                    android:id="@+id/win39"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -666,7 +667,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView74"
+                    android:id="@+id/win40"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -679,7 +680,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView76"
+                    android:id="@+id/win41"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -692,7 +693,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView78"
+                    android:id="@+id/win42"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -710,7 +711,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView98"
+                    android:id="@+id/win43"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -723,7 +724,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView100"
+                    android:id="@+id/win44"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
@@ -736,7 +737,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView102"
+                    android:id="@+id/win45"
                     android:layout_width="60dp"
                     android:layout_height="20dp"
                     android:textAlignment="center" />
