--- a/app/src/main/res/layout/manual.xml
+++ b/app/src/main/res/layout/manual.xml
@@ -26,9 +26,12 @@
             android:id="@+id/winNumBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#8BC34A"
+            android:backgroundTint="#8BC34A"
+            android:backgroundTintMode="src_over"
             android:hint="당첨번호조회"
             android:textAlignment="center"
-            android:textColorHint="#FFC107" />
+            android:textColorHint="#000000" />
     </LinearLayout>
 
     <LinearLayout
@@ -90,12 +93,50 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <EditText
+            android:id="@+id/winmoney"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:hint="1등 수령액"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/winnumbers"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="textMultiLine"
+            android:textAlignment="center"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/resetBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#8BC34A"
+            android:backgroundTint="#8BC34A"
+            android:backgroundTintMode="src_over"
+            android:hint="초기화"
+            android:textColorHint="#000000" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <Button
             android:id="@+id/moveBtn2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="자동구매"
-            android:textColorHint="#FFC107" />
+            android:background="#8BC34A"
+            android:backgroundTint="#8BC34A"
+            android:backgroundTintMode="src_over"
+            android:hint="번호생성"
+            android:textColorHint="#000000" />
     </LinearLayout>
 
 </LinearLayout>
